manifest/base/bhasai/transport-socket/service-transport-socket.yaml
apiVersion: v1
kind: Service
metadata:
  name: transport-socket
spec:
  selector:
    app.kubernetes.io/name: transport-socket
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
