manifest/base/bhasai/transport-socket/ingress-transport-socket.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transport-socket 
  namespace: default
spec:
  ingressClassName: kong
  rules:
  - host: "ts.k8s.bhasai.samagra.io"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: transport-socket
            port:
              number: 80
---
